<resources>
    <string name="app_name">Medical App</string>
    <string name="appName1">Medical</string>
    <string name="appName2">App</string>

    <string name="agora_app_id">e5657418b5554958bcb6705dc8a59d50</string>
    <string name="agora_access_token">006e5657418b5554958bcb6705dc8a59d50IABmhDiJXj51ZCdYkNorswqbEoRlXEPq4g4YiJUUgPONESMni+gAAAAAEAB5wLBGd1l3YgEAAQB3WXdi</string>

    <!-- onBoardind1-->
    <string name="onBoarding_1_headline">Find your Doctor</string>

    <!-- onBoardind2-->
    <string name="onBoarding_2_headline">Storage your\nMedical Records</string>

    <!-- onBoardind3-->
    <string name="onBoarding_3_headline">Lab tests at home</string>

    <!-- Introduction2 -->
    <string name="heading2">Find your Doctor</string>

    <!-- User Location-->
    <string name="confirmButton">Confirm</string>

    <!--Bottom Navigation -->
    <string name="bottom_nav_1">Home</string>
    <string name="bottom_nav_2">Articles</string>
    <string name="bottom_nav_3">Report</string>
    <string name="bottom_nav_4">More</string>

    <!--Home Fragment -->
    <string name="doctor_consulting">Doctor Consulting</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Strings related to register-->
    <string name="register_enter_you_name">Enter you name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">REGISTER</string>

    <!-- Usecase strings -->
    <string name="register_success">User successfully registered</string>

    <!-- Dialog Strings -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_cancel_button">Decline</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_info_title">Info</string>
    <string name="home_profilebtn">Profile</string>
    <string name="doctor_list_filter_menu">filter</string>

    <!--- Doctor Filter -->
    <string name="doctor_filter_gender_male">M</string>
    <string name="doctor_filter_gender_female">F</string>
    <string name="doctor_filter_confirmButton">CONFIRM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


   <!-- Permission Manager -->
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Default message</string>
    <string name="dialog_permission_button_positive">OK</string>

</resources>